--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-**/__pycache__/
+*/__pycache__/
+__pycache__/card.cpython-312.pyc
+__pycache__/deck.cpython-312.pyc
+__pycache__/player.cpython-312.pyc
